// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileFieldWrapper renders disabled file input 1`] = `
<fieldset>
  <Label>
    Test File Input
     *
     
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={true}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        <FileUpload />
         Drag a file here, or click to browse
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input 1`] = `
<fieldset>
  <Label>
    Test File Input
     *
     
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        <FileUpload />
         Drag a file here, or click to browse
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with error message 1`] = `
<fieldset>
  <Label>
    Test File Input
     *
     
    <Error
      error="Oh no!"
      wrapper="span"
    />
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        <FileUpload />
         Drag a file here, or click to browse
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with help message 1`] = `
<fieldset>
  <Label>
    Test File Input
     *
     
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        <FileUpload />
         Drag a file here, or click to browse
      </span>
    </Dropzone>
  </div>
  <div>
    Ask Google!
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with no specified type 1`] = `
<fieldset>
  <Label>
    Test File Input
     *
     
  </Label>
  <div>
    <Dropzone
      accept=""
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        <FileUpload />
         Drag a file here, or click to browse
      </span>
    </Dropzone>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with selected filename 1`] = `
<fieldset>
  <Label>
    Test File Input
     *
     
  </Label>
  <div>
    <Dropzone
      accept=".csv"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
    >
      <span>
        test.csv
      </span>
    </Dropzone>
  </div>
</fieldset>
`;
